Fix spacing

--- a/packages/manager-components/src/components/Header/styles.css
+++ b/packages/manager-components/src/components/Header/styles.css
@@ -77,3 +77,7 @@
 .header__account-status--error {
   color: var(--color-loss);
 }
+
+:global(.header__logo-link) {
+  font-size: 0;
+}
